[gd_scene load_steps=12 format=3 uid="uid://br3my5gbq2wqq"]

[ext_resource type="Script" path="res://UI/Menu/ActionMenu.gd" id="1_721oc"]
[ext_resource type="Texture2D" uid="uid://cdwqaxqiht31h" path="res://UI/Menu/AttackMenuFull.png" id="2_gpeg0"]
[ext_resource type="Texture2D" uid="uid://drl5015vm43yq" path="res://UI/Menu/AttackMenuTopHighlight.png" id="3_m6m08"]
[ext_resource type="FontFile" uid="uid://mq727r4s71cw" path="res://slkscr.ttf" id="4_hwbga"]
[ext_resource type="AudioStream" uid="uid://dwu6p5o0ru4ha" path="res://UI/Menu/MenuSelect.mp3" id="5_gf4qq"]
[ext_resource type="AudioStream" uid="uid://cxtbm4issc77h" path="res://UI/Menu/MenuExit.mp3" id="6_cvy1h"]

[sub_resource type="LabelSettings" id="LabelSettings_a2r3j"]
font = ExtResource("4_hwbga")

[sub_resource type="Animation" id="Animation_1roul"]
resource_name = "OpenMenu"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 1.75962,
"start_offset": 0.0448872,
"stream": ExtResource("5_gf4qq")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_37s8f"]
resource_name = "CloseMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0304473,
"start_offset": 0.0308974,
"stream": ExtResource("6_cvy1h")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_ckl3i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r2qja"]
_data = {
"CloseMenu": SubResource("Animation_37s8f"),
"OpenMenu": SubResource("Animation_1roul"),
"RESET": SubResource("Animation_ckl3i")
}

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 30.0
offset_right = -4.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_721oc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 128.0
texture = ExtResource("2_gpeg0")

[node name="Highlight" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 253.0
offset_bottom = 29.0
texture = ExtResource("3_m6m08")

[node name="Options" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="actionLabel1" type="Label" parent="Options"]
layout_mode = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 253.0
offset_bottom = 29.0
label_settings = SubResource("LabelSettings_a2r3j")
vertical_alignment = 1

[node name="actionLabel2" type="Label" parent="Options"]
layout_mode = 0
offset_left = 3.0
offset_top = 29.0
offset_right = 253.0
offset_bottom = 53.0
label_settings = SubResource("LabelSettings_a2r3j")
vertical_alignment = 1

[node name="actionLabel3" type="Label" parent="Options"]
layout_mode = 0
offset_left = 3.0
offset_top = 53.0
offset_right = 253.0
offset_bottom = 77.0
label_settings = SubResource("LabelSettings_a2r3j")
vertical_alignment = 1

[node name="actionLabel4" type="Label" parent="Options"]
layout_mode = 0
offset_left = 3.0
offset_top = 77.0
offset_right = 253.0
offset_bottom = 101.0
label_settings = SubResource("LabelSettings_a2r3j")
vertical_alignment = 1

[node name="actionLabel5" type="Label" parent="Options"]
layout_mode = 0
offset_left = 3.0
offset_top = 101.0
offset_right = 253.0
offset_bottom = 125.0
label_settings = SubResource("LabelSettings_a2r3j")
vertical_alignment = 1

[node name="HighlightTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r2qja")
}
autoplay = "OpenMenu"

[connection signal="timeout" from="HighlightTimer" to="." method="ToggleGrow"]
